feat: 景点门票列表，当日可预定状态

--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/components/ticket-item/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/components/ticket-item/index.wxml
@@ -8,7 +8,7 @@
       <view class="shop-name">{{ticket.shopInfo.name}}</view>
     </view>
     <view class="tips-wrap row">
-      <view class="tips stress">{{bookingTips}}</view>
+      <view class="tips stress">{{ticket.bookingTips}}</view>
       <view class="tips" wx:if="{{ticket.effectiveTime}}">出票{{ticket.effectiveTime}}小时后可用</view>
     </view>
     <view class="tips-wrap row">
