feat: 景点门票详情弹窗

--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/components/collapse-item/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/components/collapse-item/index.wxml
@@ -19,7 +19,7 @@
       wx:for-index="ticketIndex" 
       wx:for-item="ticket"
       ticket="{{ticket}}"
-      bindtap="showNoticePopup"
+      bind:showNoticePopup="showNoticePopup"
     />
   </view>
 </view>
