--- a/pages/subpages/mall/scenic-spot/subpages/order-check/components/price-detail-popup/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/order-check/components/price-detail-popup/index.wxml
@@ -3,8 +3,8 @@
     <view class="popup-title row center">费用明细</view>
     <view class="price-list">
       <view class="price-item row between">
-        <view class="price-name">成人票</view>
-        <view class="price-detail">¥40.00 x 1</view>
+        <view class="price-name">{{category}}</view>
+        <view class="price-detail">¥{{price}} x {{num}}</view>
       </view>
     </view>
   </view>
