feat: 景点门票订单

--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -37,9 +37,9 @@
     </view>
 
     <view class="function-wrap">
-      <navigator class="function-item" url="/pages/subpages/mine/order-list/index" hover-class="none">
+      <navigator class="function-item" url="/pages/subpages/mine/order-center/index" hover-class="none">
         <image class="function-icon" src="./images/order.png" />
-        <view class="function-desc">我的订单</view>
+        <view class="function-desc">订单中心</view>
       </navigator>
       <navigator class="function-item" url="/pages/subpages/mine/address-list/index" hover-class="none">
         <image class="function-icon" src="./images/address.png" />
