--- a/pages/subpages/mine/order-center/subpages/scenic-order-list/subpages/comment/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/scenic-order-list/subpages/comment/index.wxml
@@ -1,2 +1,1 @@
-<!--pages/mine/suppages/order-list/subpages/comment/index.wxml-->
-<text>pages/mine/suppages/order-list/subpages/comment/index.wxml</text>
+<text></text>
