--- a/pages/subpages/mine/merchant-center/index.wxss
+++ b/pages/subpages/mine/merchant-center/index.wxss
@@ -5,7 +5,7 @@
   border-top: 1px solid #f5f6f7;
 }
 .list {
-  height: 88rpx;
+  height: 100rpx;
   border-bottom: 1px solid #f5f6f7;
 }
 .list:last-child {
@@ -13,7 +13,8 @@
 }
 .title {
   color: #333;
-  font-size: 26rpx;
+  font-size: 28rpx;
+  font-weight: 500;
 }
 .content {
   color: #666;
