feat: 景点门票订单

--- a/pages/subpages/mine/order-center/subpages/scenic-order-list/components/order-list/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/scenic-order-list/components/order-list/index.wxml
@@ -12,7 +12,7 @@
       <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
     </view>
     <view class="list-content">
-      <goods-list list="{{item.goodsList}}" />
+      <ticket-item ticketInfo="{{item.ticketInfo}}" />
     </view>
     <view class="list-footer">
       <view class="total-info row baseline">
